# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aether-config"
version = "0.1.0"
description = "Distributed Configuration & Secrets Orchestrator"
authors = [{name = "Senior Engineer"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.70.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.15.0",
    "asyncio",
    "aiofiles",
    "redis",
    "psycopg2-binary",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/example/aether-config"
Repository = "https://github.com/example/aether-config"

[tool.setuptools.packages.find]
where = ["."]
include = ["aether_config*"]